fix: Use unmodifiable maps instead of copyOf to allow `null` parameters. (#789)
Fixes #785